--- a/index.html
+++ b/index.html
@@ -19,16 +19,80 @@
         </nav>
       </div>
     </header>
-<!-- main content -->
-
-
+<!-- Mission content -->
 
 <div class="content">
   <div class="mission">
     <h2>Our Mission</h2>
     <h4>Handpicked, Artisanally Curated, Free Range, Small Bach, Fair Trade, Organic Tea</h4>
   </div>
+</div>
+<!--Tea of the month -->
+<div class="teatable">
+  <div class="month">
+    <h2>Tea of the Month</h2>
+    <h4>What's Steeping at The Tea Cozy</h4>
+  </div>
+  <div class="teaflavor">
+    <div class="zerotea">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="Tea cup">
+          <h4>Fall Berry Blitz Tea</h4>
+    </div>
+    <div class="firsttea">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="tea crate">
+        <h4>Spiced Rum Tea</h4>
+    </div>
+   <div class="secondtea">
+     <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="donut">
+     <h4>Seasonal Donuts</h4>
+   </div>
+   </div>
+   <div class="tea2">
+   <div class="thirdtea">
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="tea cup">
+    <h4>Myrtle Ave Tea</h4>
+  </div>
+  <div class="forthtea">
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="tea cup and sugar">
+    <h4>Bedford Bizarre Tea</h4>
+  </div>
+ </div>
+</div>
+<!-- addresses to buy tea -->
+<div class="contentlocation">
+  <div class="locations">
+    <h2>Locations</h2>
+  </div>
+  <div class="address">
+    <div class="downtown">
+      <h3>Downtown</h3>
+      <p>384 West 4th St</p>
+      <p>Suite 108</p>
+      <p>Portland, Maine</p>
+    </div>
+  <div class="East">
+    <h3>East Bayside</h3>
+    <p>3433 Phisherman's Avenue</p>
+    <p>(Northwest Corner)</p>
+    <p>Portland, Maine</p>
+   </div>
+  <div class="oakdale">
+    <h3>Oakdale</h3>
+    <p>515 Crescent Avenue</p>
+    <p>Second Floor</p>
+    <p>Portland, Maine</p>
+  </div>
 
+  </div>
+</div>
+<!-- footer and end page stuff-->
+<div class="footer">
+  <h2>The Tea Cozy</h2>
+  <h5>contact@theteacozy.com</h5>
+  <h5>917-555-8904</h5>
+</div>
+<div class="copyright">
+  <h5>Copyright The Tea Cozy 2017</h5>
 
 </div>
 
